--- a/New folder/from flask import Flask, render_template.html
+++ b/New folder/from flask import Flask, render_template.html
@@ -8,7 +8,7 @@
             font-family: 'Segoe UI', sans-serif;
             margin: 0;
             padding: 0;
-            background-image: url("{{ url_for('static', filename='images/house.jpg') }}");
+            background-image: url("static/images/House21.jpg"); 
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
